corrected images alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ hr {
   border-radius: 60%;
   width: 25%;
   float: left;
+  margin-top: 5%;
   margin-right: 40px;
 }
 .skill2 {
@@ -23,6 +24,7 @@ hr {
   border-radius: 60%;
   width: 25%;
   float: right;
+  margin-top: 5%;
   margin-left: 40px;
 }
 .mountain {
